# excel-backend

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.mac  README.md  docker-compose.yml  pyproject.toml
src/: run.py
src/app/: main.py
src/app/database/: init_db.py  main.py  models.py
src/app/database/create/: main.py
src/app/database/read/: main.py
src/app/image/: main.py
src/app/product_enhancer/: enhance.py  web_search.py
src/app/product_sage/: improvement.py  main.py  sentiment.py  translation.py  web_reviewer.py
src/app/schemas/: api.py  product.py  product_sage.py  review.py
src/app/swot/: main.py
src/config/: llm.py  main.py
